# bias2fair-synth

./: .agent-context.md  .gitignore  LICENSE  README.md  pyproject.toml  scratch.py  scratch_aif360.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/: .~lock.compas-scores-two-years.csv#
outputs/: adult_results.csv  compas_results.csv  diabetes_results.csv  summary_metrics.csv  summary_metrics_adult.csv  summary_metrics_compas.csv  summary_metrics_diabetes.csv
outputs/predictions/: adult_S1_None_Baseline_CatBoost_seed101.csv  adult_S1_None_Baseline_CatBoost_seed123.csv  adult_S1_None_Baseline_CatBoost_seed13.csv  adult_S1_None_Baseline_CatBoost_seed2024.csv  adult_S1_None_Baseline_CatBoost_seed42.csv  adult_S1_None_Baseline_CatBoost_seed555.csv  adult_S1_None_Baseline_CatBoost_seed7.csv  adult_S1_None_Baseline_CatBoost_seed777.csv  adult_S1_None_Baseline_CatBoost_seed88.csv  adult_S1_None_Baseline_CatBoost_seed999.csv  adult_S1_None_Baseline_LogisticRegression_seed101.csv  adult_S1_None_Baseline_LogisticRegression_seed123.csv  adult_S1_None_Baseline_LogisticRegression_seed13.csv  (+2507 more)
references/: dataset_metadata_dictionary.md
reports/: Final_Analysis_Report.md  interpretacao_resultados.md  summary_metrics_robust.csv  synthetic_quality_sdv_all_seeds.csv
scripts/: analise_conclusoes.py  analyze_compas_features.py  check_parity.py  compare_quality.py  evaluate_saved_synthetic.py  extended_sufficiency_test.py  generate_analysis.py  generate_individual_plots.py  generate_paper_plots.py  generate_plots.py  generate_summary_table.py  plot_sdv_vs_ml.py  plot_tvae_quality.py  run_experiment.py  seed_manager.py  test_diffusion.py
utils/: __init__.py  check_parity.py  data_loader.py  data_loader_adult.py  data_loader_compas.py  data_loader_diabetes.py  diffusion_wrapper.py  metrics.py
(+845 files in other folders)
