[project]
name = "bias2fair-synth"
version = "0.1.0"
description = ""
authors = [
    {name = "AUTHOR_NAME", email = "author@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.15"
dependencies = [
    "numpy (>=2.4.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scipy (>=1.15,<2.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "fairlearn (>=0.13.0,<0.14.0)",
    "aif360 (>=0.6.1,<0.7.0)",
    "rich (>=15.0.0,<16.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "sdv (<1.36.0)",
    "faker (>=40.13.0,<41.0.0)",
    "imbalanced-learn (>=0.14.1,<0.15.0)"
]

[tool.poetry]
packages = [{include = "exampel", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
